[gd_scene load_steps=13 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://Rat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlayerStats.gd" type="Script" id=4]
[ext_resource path="res://Images/Dungeon.png" type="Texture" id=5]
[ext_resource path="res://SkillButton.gd" type="Script" id=6]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=7]
[ext_resource path="res://StatsPanel.gd" type="Script" id=8]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="ButtonGroup" id=3]
resource_name = "skills"

[sub_resource type="Animation" id=1]
resource_name = "FadeToNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 1 )
enemies = [ ExtResource( 2 ), ExtResource( 3 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 5 )

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 29 )

[node name="Enemy" parent="EnemyPosition" instance=ExtResource( 9 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_right = 90.0
margin_bottom = 47.0
mouse_filter = 2

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="StatsPanel" type="Panel" parent="UI"]
visible = false
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 8 )

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 2.0
margin_right = 25.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 29.0
margin_top = 2.0
margin_right = 54.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 58.0
margin_top = 2.0
margin_right = 84.0
margin_bottom = 21.0
size_flags_horizontal = 3
text = "MP
10"
align = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
margin_left = 3.0
margin_top = 2.0
margin_right = 91.0
margin_bottom = 23.0
custom_constants/line_separation = 2
custom_styles/normal = SubResource( 2 )
text = "Here is a test
So we can see how it
looks"
scroll_active = false

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 3.0
margin_top = 73.0
margin_right = 89.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 4
columns = 2

[node name="Slash" type="Button" parent="UI/BattleActionButtons"]
margin_right = 40.0
margin_bottom = 13.0
rect_min_size = Vector2( 40, 13 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "SLASH"
script = ExtResource( 6 )

[node name="Cross" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_right = 84.0
margin_bottom = 13.0
rect_min_size = Vector2( 40, 13 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "CROSS"
script = ExtResource( 6 )

[node name="Triple" type="Button" parent="UI/BattleActionButtons"]
margin_top = 16.0
margin_right = 40.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 13 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "TRIPLE"
script = ExtResource( 6 )

[node name="Combo" type="Button" parent="UI/BattleActionButtons"]
margin_left = 44.0
margin_top = 16.0
margin_right = 84.0
margin_bottom = 29.0
rect_min_size = Vector2( 40, 13 )
rect_pivot_offset = Vector2( -99, 55 )
toggle_mode = true
group = SubResource( 3 )
text = "COMBO"
script = ExtResource( 6 )

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeToNewRoom = SubResource( 1 )

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
[connection signal="toggled" from="UI/BattleActionButtons/Slash" to="UI/BattleActionButtons/Slash" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Cross" to="UI/BattleActionButtons/Cross" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Triple" to="UI/BattleActionButtons/Triple" method="_on_toggled"]
[connection signal="toggled" from="UI/BattleActionButtons/Combo" to="UI/BattleActionButtons/Combo" method="_on_toggled"]
